// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ContractorResourcesForm component renders correctly when initially collapsed 1`] = `
<ContractorReview
  contractor={
    Object {
      "desc": "They cleaned up the latrines after the Battle of Hastings",
      "end": "1066-10-15",
      "hourly": Object {
        "data": Object {
          "1066": Object {
            "hours": 10,
            "rate": 100,
          },
          "1067": Object {
            "hours": 20,
            "rate": 200,
          },
        },
        "useHourly": false,
      },
      "id": "contractor 1",
      "key": "key 1",
      "name": "Honey Dipper Dan",
      "start": "1066-10-14",
      "totalCost": 12345,
      "years": Object {
        "1066": 300,
        "1067": 400,
      },
    }
  }
  handleDelete={[Function]}
  handleEdit={[Function]}
  idx={1}
  years={
    Array [
      "1066",
      "1067",
    ]
  }
/>
`;

exports[`the ContractorResourcesForm component renders correctly when not collapsed 1`] = `
<div
  className="ds-u-margin-top--2 ds-u-margin-bottom--3"
>
  <TextField
    label="Contractor Name"
    name="contractor-name"
    type="text"
    value="Honey Dipper Dan"
  />
  <TextField
    label="Description of Services"
    multiline={true}
    name="contractor-description"
    rows={5}
    type="text"
    value="They cleaned up the latrines after the Battle of Hastings"
  />
  <FormLabel
    component="label"
  >
    Contract Term
  </FormLabel>
  <div
    className="ds-c-choice__checkedChild ds-u-padding-y--0"
  >
    <DateField
      dateFormatter={[Function]}
      dayLabel="Day"
      dayName="day"
      dayValue={14}
      hint="For example: 4 / 28 / 1986"
      label="Start"
      monthLabel="Month"
      monthName="month"
      monthValue={10}
      onChange={[Function]}
      yearLabel="Year"
      yearMin={1900}
      yearName="year"
      yearValue={1066}
    />
    <DateField
      dateFormatter={[Function]}
      dayLabel="Day"
      dayName="day"
      dayValue={15}
      hint=""
      label="End"
      monthLabel="Month"
      monthName="month"
      monthValue={10}
      onChange={[Function]}
      yearLabel="Year"
      yearMin={1900}
      yearName="year"
      yearValue={1066}
    />
  </div>
  <DollarField
    label="Total Contract Cost"
    name="contractor-total-cost"
    onChange={null}
    size="medium"
    value={12345}
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      This is an hourly resource
    </legend>
    <Choice
      checked={true}
      inputPlacement="left"
      name="apd-activity-contractor-hourly-key 1-no"
      type="radio"
      value="no"
    >
      No
    </Choice>
    <Choice
      checked={false}
      checkedChildren={
        <div
          className="ds-c-choice__checkedChild"
        >
          <React.Fragment>
            <FormLabel
              component="label"
            >
              FFY 
              1066
            </FormLabel>
            <div
              className="ds-l-row ds-u-padding-left--2"
            >
              <TextField
                label="Number of hours"
                labelClassName="ds-u-margin-top--1"
                name="contractor-num-hours-ffy-1066"
                size="medium"
                type="number"
                value={10}
              />
              <DollarField
                className="ds-u-margin-left--1"
                label="Hourly rate"
                labelClassName="ds-u-margin-top--1"
                name="contractor-hourly-rate-ffy-1066"
                onChange={null}
                size="medium"
                value={100}
              />
            </div>
          </React.Fragment>
          <React.Fragment>
            <FormLabel
              component="label"
            >
              FFY 
              1067
            </FormLabel>
            <div
              className="ds-l-row ds-u-padding-left--2"
            >
              <TextField
                label="Number of hours"
                labelClassName="ds-u-margin-top--1"
                name="contractor-num-hours-ffy-1067"
                size="medium"
                type="number"
                value={20}
              />
              <DollarField
                className="ds-u-margin-left--1"
                label="Hourly rate"
                labelClassName="ds-u-margin-top--1"
                name="contractor-hourly-rate-ffy-1067"
                onChange={null}
                size="medium"
                value={200}
              />
            </div>
          </React.Fragment>
        </div>
      }
      inputPlacement="left"
      name="apd-activity-contractor-hourly-key 1-yes"
      type="radio"
      value="yes"
    >
      Yes
    </Choice>
  </fieldset>
  <DollarField
    disabled={false}
    key="1066"
    label="FFY 1066 Cost"
    name="contractor-cost-ffy-1066"
    onChange={null}
    size="medium"
    value={300}
  />
  <DollarField
    disabled={false}
    key="1067"
    label="FFY 1067 Cost"
    name="contractor-cost-ffy-1067"
    onChange={null}
    size="medium"
    value={400}
  />
  <Button
    className="ds-u-margin-top--4"
    onClick={[Function]}
    type="button"
    variation="primary"
  >
    Done
  </Button>
</div>
`;

exports[`the ContractorResourcesForm component renders if use hourly data is selected 1`] = `
<div
  className="ds-u-margin-top--2 ds-u-margin-bottom--3"
>
  <TextField
    label="Contractor Name"
    name="contractor-name"
    type="text"
    value="Honey Dipper Dan"
  />
  <TextField
    label="Description of Services"
    multiline={true}
    name="contractor-description"
    rows={5}
    type="text"
    value="They cleaned up the latrines after the Battle of Hastings"
  />
  <FormLabel
    component="label"
  >
    Contract Term
  </FormLabel>
  <div
    className="ds-c-choice__checkedChild ds-u-padding-y--0"
  >
    <DateField
      dateFormatter={[Function]}
      dayLabel="Day"
      dayName="day"
      dayValue={14}
      hint="For example: 4 / 28 / 1986"
      label="Start"
      monthLabel="Month"
      monthName="month"
      monthValue={10}
      onChange={[Function]}
      yearLabel="Year"
      yearMin={1900}
      yearName="year"
      yearValue={1066}
    />
    <DateField
      dateFormatter={[Function]}
      dayLabel="Day"
      dayName="day"
      dayValue={15}
      hint=""
      label="End"
      monthLabel="Month"
      monthName="month"
      monthValue={10}
      onChange={[Function]}
      yearLabel="Year"
      yearMin={1900}
      yearName="year"
      yearValue={1066}
    />
  </div>
  <DollarField
    label="Total Contract Cost"
    name="contractor-total-cost"
    onChange={null}
    size="medium"
    value={12345}
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      This is an hourly resource
    </legend>
    <Choice
      checked={false}
      inputPlacement="left"
      name="apd-activity-contractor-hourly-key 1-no"
      type="radio"
      value="no"
    >
      No
    </Choice>
    <Choice
      checked={true}
      checkedChildren={
        <div
          className="ds-c-choice__checkedChild"
        >
          <React.Fragment>
            <FormLabel
              component="label"
            >
              FFY 
              1066
            </FormLabel>
            <div
              className="ds-l-row ds-u-padding-left--2"
            >
              <TextField
                label="Number of hours"
                labelClassName="ds-u-margin-top--1"
                name="contractor-num-hours-ffy-1066"
                size="medium"
                type="number"
                value={10}
              />
              <DollarField
                className="ds-u-margin-left--1"
                label="Hourly rate"
                labelClassName="ds-u-margin-top--1"
                name="contractor-hourly-rate-ffy-1066"
                onChange={null}
                size="medium"
                value={100}
              />
            </div>
          </React.Fragment>
          <React.Fragment>
            <FormLabel
              component="label"
            >
              FFY 
              1067
            </FormLabel>
            <div
              className="ds-l-row ds-u-padding-left--2"
            >
              <TextField
                label="Number of hours"
                labelClassName="ds-u-margin-top--1"
                name="contractor-num-hours-ffy-1067"
                size="medium"
                type="number"
                value={20}
              />
              <DollarField
                className="ds-u-margin-left--1"
                label="Hourly rate"
                labelClassName="ds-u-margin-top--1"
                name="contractor-hourly-rate-ffy-1067"
                onChange={null}
                size="medium"
                value={200}
              />
            </div>
          </React.Fragment>
        </div>
      }
      inputPlacement="left"
      name="apd-activity-contractor-hourly-key 1-yes"
      type="radio"
      value="yes"
    >
      Yes
    </Choice>
  </fieldset>
  <p
    className="ds-u-margin-bottom--0"
  >
    <FormLabel
      component="label"
    >
      FFY 
      1066
       Cost
    </FormLabel>
    <Dollars
      long={false}
    >
      300
    </Dollars>
    <FormLabel
      component="label"
    >
      FFY 
      1067
       Cost
    </FormLabel>
    <Dollars
      long={false}
    >
      400
    </Dollars>
  </p>
  <Button
    className="ds-u-margin-top--4"
    onClick={[Function]}
    type="button"
    variation="primary"
  >
    Done
  </Button>
</div>
`;
